Revamp module1.html with personal portfolio content

--- a/module1.html
+++ b/module1.html
@@ -1,16 +1,47 @@
-<footer>This will soon turn into my portfolio</footer>
-<header>
-    Portfolio
-</header>
-
+<!DOCTYPE html>
+<header></header>
 <body>
-    <p>About me</p>
-    <p>Skills</p>
-    <p>Hobbies</p>
+    <div>
+        <h1>Abror Mahir</h1>
+        <!--I love you Tonami ✨💖-->
+        <h6>Top Priorities: html, css, 3 design/week</h6>
+    </div>
+    
+    <div>
+        <h3>About me</h3>
+        <p>Hello! I am Abror, a CSE undergrad from Brac University.
+            Currently I am persuing a skillset on webdevelopment.
+            I have a strong knowledge of website interfaces, and now 
+            I want to design and develop websites by myself. 
 
-    <p>Hello,My name is Abror.I am a passionate web developer.This is the beginning of my journey.
-        I like cats,reading books,and playing chess.
-        My skillset is limited but not confined to Java,html,Css, JavaScript,React
-    </p>
+            This website will soon be turned into my own <strong>portfolio</strong>
+             acting aas the founding pillar of my web development journey.
+
+            <em>Please keep me in your prayers</em>
+        </p>
+    </div>
+
+    <div>
+        <h3>My Skillset</h3>
+        <p>My skillsets are small but not limited to</p>
+        <li>
+            <ul>Java : Basics, OOP, DSA</ul>
+            <ul>Moderate : Html</ul>
+            <ul>Basics of C, C++, Python</ul>
+            <ul>Basics of css, javascript, react</ul>
+        </li>
+    </div>
+
+    <div>
+        <h3>Hobbies</h3>
+        <li>
+            <ul>Walking</ul>
+            <ul>Drawing</ul>
+            <ul>Reading Books</ul>
+            <ul>Chess</ul>
+            <ul>Star Gazing with ✨</ul>
+        </li>
+    </div>
 
 </body>
+<footer></footer>
