--- a/module1.html
+++ b/module1.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<header></header>
-<body>
-    <div>
+
+<html lang = "en">
+    <head>
+        <meta charset = "UTF-8">
+        <div>
         <h1>Abror Mahir</h1>
         <!--I love you Tonami ✨💖-->
         <h6>Top Priorities: html, css, 3 design/week</h6>
-    </div>
-    
+        </div>
+    </head>
+
+    <body>
     <div>
         <h3>About me</h3>
         <p>Hello! I am Abror, a CSE undergrad from Brac University.
@@ -45,3 +49,4 @@
 
 </body>
 <footer></footer>
+</html>
